<resources>
    <string name="app_name">Tienda de campeones</string>
    <string name="user">Nombre</string>
    <string name="passware">Contraseña</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Repetir Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_button_text">Registrate</string>
    <string name="contdes_start_bttn">start_bttn</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="back_button">Volver</string>
    <string name="menu_button">Menu</string>
    <string name="cart_button">Ir al carro</string>
    <string name="home_button">Inicio</string>
    <string name="products_button">Productos</string>
    <string name="account_button">Mi Cuenta</string>
    <string name="products_title">Nuestros productos</string>
    <string name="contdes_pay">Confirmar pago</string>
    <string name="products_germany">Alemania</string>
    <string name="products_argentina">Argentina</string>
    <string name="products_brazil">Brasil</string>
    <string name="products_spain">España</string>
    <string name="products_france">Francia</string>
    <string name="products_england">Inglaterra</string>
    <string name="products_italy">Italia</string>
    <string name="products_uruguay">Uruguay</string>
    <string name="product_name">Camiseta Argentina 2021</string>
    <string name="product_amountLabel">Cantidad:</string>
    <string name="product_amount">Cantidad</string>
    <string name="product_sizeLabel">Talle:</string>
    <string name="product_size">XL</string>
    <string name="product_priceLabel">$12345</string>
    <string name="product_addToCart">Agregar</string>
    <string name="webtn">¡Conócenos!</string>
    <string name="Dbtn">Dashboard</string>
    <string name="profile_btn">Perfil</string>
    <string name="cl1">Tu perfil</string>
    <string name="Logoutbtn">Finalizar Sesión</string>
    <string-array name="payment_methods">
        <item>Seleccionar método de pago</item>
        <item>Tarjeta de crédito</item>
        <item>Débito</item>
        <item>Transferencia bancaria</item>
    </string-array>
    <string name="titleAbout">¿QUE ES TIENDA DE CAMPEONES?</string>
    <string name="description">Bienvenidos a Tienda de Campeones. Somos un equipo de apasionados por el fútbol y su historia, dedicados a revivir los momentos más icónicos del deporte a través de camisetas auténticas de los países que han ganado la Copa del Mundo. Cada prenda refleja el esfuerzo y la dedicación de los jugadores que hicieron historia. Únete a nosotros para celebrar el legado del fútbol con nuestras camisetas y revive la grandeza de los campeones.</string>
    <string name="contactBtn">CONTACTO</string>
    <string name="VisitarWeb">VISITA NUESTRA WEB</string>
    <string name="photoAbout">Imagen relacionada con Tienda de Campeones</string>
    <string name="titleContact">CONTACTANOS!</string>
    <string name="nameContactInput">Nombre</string>
    <string name="lastnameContactInput">Apellido</string>
    <string name="emailContactInput">Correo electronico</string>
    <string name="messageContactInput">Mensaje</string>
    <string name="additionalInfoTitle">Información adicinal</string>
    <string name="additionalInfoText">Nos pondremos en contacto contigo dentro de las 24 a 48 horas hábiles. Gracias por confiar en Tienda de Campeones.</string>
    <string name="sendFormContactButton">ENVIAR</string>
    <string name="contSendContactButton">ENVIAR</string>
    <string name="knowOurProducts">Conoce Nuestros Productos</string>
    <string name="sendContactBtn">ENVIAR CORREO</string>
    <string name="buyContactBtn">IR A COMPRAR</string>
    <string name="argContactProd">Argentina 1978</string>
    <string name="brContactProd">Brasil 1958</string>
    <string name="frContactProd">Francia 1998</string>
    <string name="homeTitle">LA TIENDA DE LOS AUTENTICOS CAMPEONES</string>
    <string name="homeDescription">Comprá acá las camisetas retro de los campeones mundiales, desde 1930 hasta 2022, y demostrá que sos parte de la historia del fútbol.</string>
    <string name="homeTitleTwo">Conocé nuestros productos</string>
    <string name="homeSubtitle">Vestí tu pasión con un estilo único</string>
    <string name="homeBtn">Comenzar a comprar</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="order_title">Mi pedido</string>
    <string name="customer_label">Cliente:</string>
    <string name="order_label">Número de Pedido:</string>
    <string name="order_date_label">Fecha:</string>
    <string name="order_status_label">Estado:</string>
    <string name="product_details_label">Detalles de Productos:</string>
    <string name="payment_method_label">Forma de Pago:</string>
    <string name="cards_method">Tarjeta:</string>
    <string name="no_cards">No se han utilizado tarjeta</string>
    <string name="total_paid_label">Total Abonado:</string>
    <string name="order_tracking_msg">Seguí tu pedido acá con tu número de pedido</string>
    <string name="order_tracking_btn">Seguí tu pedido acá</string>
    <string name="cancel_button">Arrepentimiento</string>
    <string name="contdes_end_bttn">Finalizar compra</string>
    <string name="contdes_track_order">Segui tu pedido</string>
    <string name="contdes_cancel">Arrepentimiento</string>
    <string name="searchV">Número de pedido o fecha</string>
    <string name="order_title_dashboard">Pedidos</string>
    <string name="no_orders_message">No tienes pedidos</string>
    <string name="contdes_filter">Filtrar</string>
    <string name="order_title_admin">Pedido</string>
    <string name="send_order_button">Enviar Pedido</string>
    <string name="cancel_order_button">Cancelar Pedido</string>
    <string name="order_tracking_btn_admin">Ver logistica de envío</string>
    <string name="search_hint">Buscar por nombre o apellido</string>
    <string name="user_list_title">Lista de Usuarios</string>
    <string name="user_name_description">Nombre completo del usuario</string>
    <string name="user_email_description">Correo electrónico del usuario</string>
    <string name="user_role_description">Rol del usuario en el sistema</string>
    <string name="disableAccount">desactivar cuenta</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="inputName">Nombre</string>
    <string name="inputLastName">Apellido</string>
    <string name="inputAddress">Domicilio</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Contraseña</string>
    <string name="saveChangesBtn">Guardar cambios</string>
    <string name="configuracionPerfil">Configuracion de perfil</string>
    <string name="order_screen_title">Nuestros Pedidos</string>
    <string name="contdes_logo">Logotipo de Tienda de Campeones</string>
    <string name="contdes_email_input">Campo de entrada de correo electrónico</string>
    <string name="contdes_password_input">Campo de entrada de contraseña</string>
    <string name="contdes_login_button">Botón para iniciar sesión</string>
    <string name="contdes_register_button">Botón para registrarse</string>
    <string name="contdes_orders_list">Lista de pedidos de clientes</string>
    <string name="bottom_navbar_description">Barra de navegación inferior</string>
    <string name="contdes_home_button">Ir a la pantalla de inicio</string>
    <string name="contdes_profile_button">Ir a la pantalla de perfil</string>
    <string name="total_50_00">Total: $50.00</string>
    <string name="precio_50_00">Precio: $50.00</string>
    <string name="camiseta_argentina_78">Camiseta Argentina 78</string>
    <string name="cantidad">Cantidad:</string>
    <string name="disminuir_cantidad">Disminuir cantidad</string>
    <string name="_1">1</string>
    <string name="aumentar_cantidad">Aumentar cantidad</string>
    <string name="talle">Talle:</string>
    <string name="eliminar_producto">Eliminar producto</string>
    <string name="contdes_back_btn">Botón para volver</string>
    <string name="contdes_mail_btn">Botón para enviar correo</string>
    <string name="contdes_buy_btn">Botón para ir a comprar productos</string>
    <string name="contdes_title_about">Título: Conocenos!</string>
    <string name="contdes_contact_btn">Botón de contacto</string>
    <string name="contdes_products_button">Ir a la pantalla de productos</string>
    <string name="contdes_productscroll_button">Producto de scroll horizontal</string>
    <string name="contdes_productname1">Remera de Argentina 1978</string>
    <string name="contdes_image1">Imagen de Remera de Argentina 1978</string>
    <string name="contdes_productname2">Remera de Brasil 1958</string>
    <string name="contdes_image2">Imagen de Remera de Brasil 1958</string>
    <string name="contdes_productname3">Remera de Francia 1998</string>
    <string name="contdes_image3">Imagen de Remera de Francia 1998</string>
    <string name="contdes_navSup">Navegación superior</string>
    <string name="contdes_menu_desplegable">Botón de menú desplegable</string>
    <string name="contdes_dash_btn">Boton para ingresar al dashboard</string>
    <string name="contdes_about_btn">Boton para conocer de la tienda</string>
    <string name="contdes_edit_btn">Boton para editar perfil</string>
    <string name="contdes_logout_btn">Boton para cerrar sesión</string>
    <string name="contdes_add_cart_btn">Boton para agregar al carro</string>
    <string name="contdes_image">Imagen de producto</string>
    <string name="comenzar">Comenzar</string>
    <string name="main_menu_title">MENU PRINCIPAL</string>
    <string name="our_products">NUESTROS PRODUCTOS</string>
    <string name="products_menu_button">Explorá acá</string>
    <string name="cart_menu_button">Mi carro</string>
    <string name="about_us">SOBRE NOSOTROS</string>
    <string name="know_us_button">Conocenos</string>
    <string name="contact_us_button">Contactanos</string>
    <string name="my_profile">GESTIONÁ</string>
    <string name="profile_button">Mi perfil</string>
    <string name="dashboard_button">Mis pedidos</string>
    <string name="argentina_illustration_2021">Argentina_illustration_2021</string>
    <string name="camisetas_de_argentina_illustration">Camisetas de Argentina_illustration</string>
    <string name="argentina_illustration">argentina_illustration</string>
    <string name="term_and_cond">Términos y condiciones</string>
    <string name="contdes_term_bttn">Boton para redireccionar a Términos y condiciones</string>
    <string name="addressNameContact">Apellido</string>
    <string name="terminos">Términos y Condiciones (Actualizado: 07/05/2025)\n
        \n
📄 Responsable: Tienda de Campeones, CUIT 12-34567890-1, Córdoba, Argentina.\n
        \n
📩 Contacto: tiendadecampeonescba@gmail.com\n
        \n
💲 Productos y precios: En pesos argentinos (ARS), con IVA. Sujetos a cambios sin previo aviso.\n
        \n
🛒 Compras: Al confirmar una compra aceptás estos términos. Se acepta pago con tarjeta o transferencia.\n
        \n
🚚 Envíos: Por Andreani. Entrega estimada entre 5 y 10 días hábiles.\n
        \n
📦 Devoluciones: Tenés 10 días para cancelar. Producto sin uso. Costo de envío a cargo del comprador.\n
        \n
🗂️ Datos personales: Usamos tus datos solo para fines comerciales conforme a la Ley 25.326.\n
        \n
⚖️ Jurisdicción: Aplica la ley argentina. Tribunales ordinarios de Córdoba Capital.</string>
</resources>