<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutUs">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <!-- Navbar superior -->
    <LinearLayout
        android:id="@+id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_alignParentTop="true">

      <ImageButton
          android:id="@+id/backButton"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:src="@drawable/arrow_back_icon_35x35"
          android:contentDescription="@string/back_button" />

    </LinearLayout>

    <!-- Contenido centrado -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topNavbar"
        android:layout_above="@id/bottomNavbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

          <TextView
              android:id="@+id/aboutUsTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/titleAbout"
              android:textColor="@android:color/black"
              android:textSize="18sp"
              android:textStyle="bold"
              android:contentDescription="@string/contdes_title_about"
              android:focusable="true"
              android:focusableInTouchMode="true" />

          <TextView
              android:id="@+id/nosotrosTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="18dp"
              android:layout_marginBottom="16dp"
              android:gravity="center"
              android:text="@string/description"
              android:textColor="@android:color/black"
              android:textSize="16sp"
              android:contentDescription="@string/description"
              android:focusable="true"
              android:focusableInTouchMode="true" />

          <ImageView
              android:id="@+id/aboutUsImageView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:src="@mipmap/ilustracion_copa"
              android:contentDescription="@string/photoAbout"
              android:focusable="true"
              android:focusableInTouchMode="true" />

        <LinearLayout
            android:id="@+id/botoneraInferior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/aboutUsImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

          <!-- Botón para Contacto -->
          <Button
              android:id="@+id/contactButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:backgroundTint="@color/bttns"
              android:contentDescription="@string/contdes_contact_btn"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:text="@string/contactBtn"
              android:textColor="@color/colorPrimary" />

          <Button
              android:id="@+id/termsBttn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:backgroundTint="@color/bttns"
              android:contentDescription="@string/contdes_term_bttn"
              android:focusable="true"
              android:text="@string/term_and_cond"
              android:textColor="@color/colorPrimary" />
        </LinearLayout>


      <!-- Botón que redirecciona a la Web -->
        <Button
            android:id="@+id/btnVisitarWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visita nuestra web"
            android:layout_below="@id/aboutUsImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bttns"
            android:textColor="@color/colorPrimary"
            android:contentDescription="@string/VisitarWeb"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

      </LinearLayout>

    </ScrollView>

    <!-- Navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorSecondary"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bottom_navbar_description">

      <Button
          android:id="@+id/homeButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:drawableTop="@drawable/home_icon_35x35"
          android:onClick="homeButton"
          android:text="@string/home_button"
          android:textColor="@android:color/white"
          android:background="?attr/selectableItemBackgroundBorderless" />

      <Button
          android:id="@+id/productsButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:drawableTop="@drawable/shopping_bag_icon_35x35"
          android:onClick="productsButton"
          android:text="@string/products_button"
          android:textColor="@android:color/white"
          android:background="?attr/selectableItemBackgroundBorderless" />

      <Button
          android:id="@+id/profileBtn"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:drawableTop="@drawable/account_icon_35x35"
          android:onClick="profileBtn"
          android:text="@string/account_button"
          android:textColor="@android:color/white"
          android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>