<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.AdminOrdersActivity">
    <LinearLayout
        android:id="@id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:id="@+id/cartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="120dp"
            android:text="@string/order_screen_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:contentDescription="@string/order_screen_title"/>
        <ImageButton
            android:id="@+id/btn_delete_account"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onDeleteAccountClicked"
            android:contentDescription="@string/disableAccount"
            android:src="@drawable/no_accounts_35dp_7d1010_fill0_wght400_grad0_opsz40"
            />
    </LinearLayout>
    <!-- Nav inferior -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:contentDescription="@string/contdes_orders_list" />
    <LinearLayout
        android:id="@+id/bottomNavbar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorSecondary"
        android:padding="8dp"
        android:contentDescription="@string/bottom_navbar_description">
        <Button
            android:id="@+id/homeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button"
            android:textColor="@android:color/white"
            android:drawableTop="@drawable/home_icon_35x35"
            android:gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/contdes_home_button"
            android:nextFocusRight="@id/profileButton" />
        <Button
            android:id="@+id/profileButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_button"
            android:textColor="@android:color/white"
            android:drawableTop="@drawable/account_icon_35x35"
            android:gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/contdes_profile_button"
            android:nextFocusLeft="@id/homeButton"/>
    </LinearLayout>

</LinearLayout>