<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImageViewLogo"
        android:layout_width="270dp"
        android:layout_height="273dp"
        android:layout_marginTop="128dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/contdes_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/AppTheme.Button"
        android:layout_width="126dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/comenzar"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewLogo"
        app:layout_constraintVertical_bias="0.305"
        android:contentDescription="@string/contdes_start_bttn"/>

</androidx.constraintlayout.widget.ConstraintLayout>
